--- a/url_shorten/templates/url_added.html
+++ b/url_shorten/templates/url_added.html
@@ -19,7 +19,7 @@
             <div class="field">
                     <label class="label">New URL</label>
                     <div class="control">
-                        <input class="input" type="text" name="long_url" value="{{ url_for('shortener.redirect_to_url', short_url=short_url, _external=True) }}">
+                        <input class="input" type="text" name="short_url" value="{{ url_for('shortener.redirect_to_url', short_url=short_url, _external=True) }}">
                     </div>
             </div>
     </div>
